syntax = "proto3";

package store;

service Store {
  rpc GetQuantity(QuantityRequest) returns (QuantityResponse) {}
}

message QuantityRequest {
  int32 item_id = 1;
}

message QuantityResponse {
  int32 quantity = 1;
}
